docs: add H2O deployment manual